minikube/networking/sol23/app/ingress.v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-demo-ingress
  namespace: playground
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-demo
            port:
              number: 5000
